trunk/NewArchive/3cc8a6319c886987ce18b3aa33a5a666-7063104e283ed82d51a6fde7370c6e59/output
main.cpp: In function 'int main(int, char**)':
main.cpp:15:20: error: expected primary-expression before ';' token
     auto results = ;
                    ^
main.cpp:17:26: error: unable to deduce 'auto&&' from 'results'
     for ( auto& result : results ) {
                          ^
